<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DaftarActivity"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/startContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/edJudulDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mDaftar"
                    android:textSize="11pt"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <view
                    android:layout_width="420dp"
                    android:layout_height="3dp"
                    android:background="@android:color/darker_gray"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/back_user_pass">

                    <EditText
                        android:id="@+id/edNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="24"
                        android:hint="@string/eNama"
                        android:inputType="textPersonName"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAlamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/back_user_pass">

                    <EditText
                        android:id="@+id/edAlamat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="24"
                        android:hint="@string/eAlamat"
                        android:inputType="textMultiLine|text"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:id="@+id/overviewContainerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/optionJenisKelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvJenisKelamin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tJeniskelamin"
                        android:textSize="8pt"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"/>

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"/>

                    <RadioGroup
                        android:id="@+id/opsiJenisKelamin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbLaki"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eLaki"
                            android:textColor="@color/white"/>

                        <Space
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"/>

                        <RadioButton
                            android:id="@+id/rbPerempuan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ePerempuan"
                            android:textColor="@color/white"/>

                    </RadioGroup>

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="13dp"/>

                <LinearLayout
                    android:id="@+id/optionAgama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAgama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tAgama"
                        android:textSize="9pt"
                        android:layout_marginTop="56dp"
                        android:textColor="@color/white"/>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>

                    <RadioGroup
                        android:id="@+id/opsiAgama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rbIslam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eIslam"
                                android:textColor="@color/white"/>

                            <RadioButton
                                android:id="@+id/rbKatolik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eKatolik"
                                android:textColor="@color/white"/>

                            <RadioButton
                                android:id="@+id/rbKristen"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eKristen"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rbHindu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eHindu"
                                android:textColor="@color/white"/>

                            <RadioButton
                                android:id="@+id/rbBudha"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eBudha"
                                android:textColor="@color/white"/>

                            <RadioButton
                                android:id="@+id/rbKonghucu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eKonghucu"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rbPenganut"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ePenganut"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:id="@+id/overviewContainerTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/back_user_pass">

                    <EditText
                        android:id="@+id/edEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="24"
                        android:hint="@string/tEmail"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/back_user_pass">

                    <EditText
                        android:id="@+id/edPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="24"
                        android:hint="@string/tPassword"
                        android:inputType="textPassword"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRePwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/back_user_pass">

                    <EditText
                        android:id="@+id/edRePwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="24"
                        android:hint="@string/tRepass"
                        android:inputType="textPassword"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:id="@+id/endContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBatal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnBatal"
                    android:background="@drawable/back_btn_actdaftar"
                    android:ems="12"/>
                <Space
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDaftar"
                    android:ems="12"
                    android:background="@drawable/back_btn_actdaftar"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>