<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">
        
    <LinearLayout
        android:id="@+id/img"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/iconlogin" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp">

    </Space>

    <LinearLayout
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:background="@drawable/back_login"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/back_user_pass">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="17"
                android:hint="@string/tEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="17"
                android:hint="@string/tPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_btn"
                android:ems="18"
                android:text="@string/btnLogin"
                android:textColor="@color/black"
                app:backgroundTint="#FEC107" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tDaftar"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
